--- a/src/reset.css
+++ b/src/reset.css
@@ -3,15 +3,18 @@
  * https://courses.joshwcomeau.com/css-for-js/treasure-trove/010-global-styles
  */
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 * {
- margin: 0;
+  margin: 0;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -20,17 +23,29 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
 
-
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
 
@@ -38,6 +53,7 @@ pre {
   font-family: 'Fira Mono', monospace;
 }
 
-#root, #__next {
+#root,
+#__next {
   isolation: isolate;
 }
