Separate text-decoration styles because that seems to work better for Safari

--- a/src/codemirror.css
+++ b/src/codemirror.css
@@ -24,7 +24,9 @@
 
 .cm-lintRange.cm-lintRange-error {
   background-image: none;
-  text-decoration: var(--solar-red) wavy underline;
+  text-decoration: underline;
+  text-decoration-style: wavy;
+  text-decoration-color: var(--solar-red);
   text-decoration-skip-ink: none;
 }
 
