--- a/src/codemirror.css
+++ b/src/codemirror.css
@@ -3,7 +3,7 @@
 }
 
 .cm-editor .cm-scroller .cm-content {
-  caret-color: var(--solar-text-emph);
+  caret-color: var(--oksolar-text);
 }
 
 .cm-editor .cm-content {
@@ -14,7 +14,7 @@
   background: transparent;
   width: 2rem;
   border: none;
-  color: var(--solar-text-deemph);
+  color: var(--oksolar-text-deemph-2);
 }
 
 .cm-gutter.cm-lineNumbers {
@@ -26,24 +26,24 @@
   background-image: none;
   text-decoration: underline;
   text-decoration-style: wavy;
-  text-decoration-color: var(--solar-red);
+  text-decoration-color: var(--oksolar-text-red);
   text-decoration-skip-ink: none;
 }
 
 .tok-variableName {
-  color: var(--solar-blue);
+  color: var(--oksolar-text-blue);
 }
 
 .tok-variableName2 {
-  color: var(--solar-violet);
+  color: var(--oksolar-text-violet);
 }
 
 .tok-variableName.tok-local {
-  color: var(--solar-text-deemph);
+  color: var(--oksolar-text-deemph);
 }
 
 .tok-comment {
-  color: var(--solar-text);
+  color: var(--oksolar-text);
   font-style: italic;
 }
 
@@ -51,13 +51,13 @@
 .tok-number,
 .tok-string,
 .tok-macroName {
-  color: var(--solar-green);
+  color: var(--oksolar-text-green);
 }
 
 .tok-invalid {
-  color: var(--solar-red);
+  color: var(--oksolar-text-red);
 }
 
 .tok-meta {
-  color: var(--solar-yellow);
+  color: var(--oksolar-text-orange);
 }
