--- a/src/dusa.css
+++ b/src/dusa.css
@@ -102,6 +102,7 @@ main {
   align-items: center;
   padding-inline: var(--dk-small-padding);
   box-shadow: 0 0 0.3rem 0 var(--oksolar-text-deemph);
+  z-index: 2;
 }
 
 .dk-trigger-button {
